--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="@integer/google_play_services_version"/>
-        <meta-data android:name="com.google.gms.version"
-            android:value="AIzaSyD4zmAcmgVSTDcIj3agLyJfVoaudByKihk"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC6wKvkpS_-jC5c69QAgu24WAm3n6jNH-M" />
 
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity android:name=".MainActivity">
             <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="Your Api Key" />
+                android:value="AIzaSyD4zmAcmgVSTDcIj3agLyJfVoaudByKihk" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
